--- a/index.html
+++ b/index.html
@@ -108,5 +108,5 @@
 <!-- partial -->
   <script src='https://unpkg.com/css-doodle@0.15.3/css-doodle.min.js'></script>
 </body>
-<audio src="./Shape Of You.mp3" autoplay></audio>
+<audio src="Shape Of You.mp3" autoplay></audio>
 </html>
